fixed double border on emoji popup

--- a/AlanWalkerTheme/popouts.css
+++ b/AlanWalkerTheme/popouts.css
@@ -110,7 +110,6 @@
 /*Emoji Popup*/
 .emojiSection-3Fb9ix {
   background-color: var(--user-popout);
-  border: 1px solid rgb(var(--border-color-1), var(--border-opacity-1));
   border-radius: 8px;
 }
 .emojiSection-3Fb9ix .flex-1xMQg5.horizontal-1ae9ci,
